@@ -1,3 +1,9 @@
+2013-06-02 Florian Dejonckheere <florian@floriandejonckheere.be>
+
+	* ipmitool-1.8.12-3 :
+	Move /usr/sbin/ipmievd to /usr/bin (as per Arch Linux regulations)
+	Added license
+
 2013-05-07 Florian Dejonckheere <florian@floriandejonckheere.be>
 
 	* ipmitool-1.8.12-3 :
